--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,4 +18,6 @@
             android:foregroundServiceType="dataSync"
             android:exported="false" />
     </application>
+    <!-- Required for HTTP client in instrumentation test -->
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
