--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,3 +15,17 @@ allprojects {
         mavenCentral()
     }
 }
+
+// -------- Rust build integration --------
+// Build Rust JNI library via cargo-ndk and copy outputs to jniLibs
+// Requires `cargo install cargo-ndk` and ANDROID_NDK_HOME set.
+tasks.register('cargoBuild', Exec) {
+    workingDir rootDir
+    commandLine 'cargo', 'ndk', '-t', 'arm64-v8a', '-o', "${projectDir}/app/src/main/jniLibs", 'build', '--release'
+}
+
+afterEvaluate {
+    tasks.named('preBuild').configure {
+        dependsOn tasks.named('cargoBuild')
+    }
+}
