--- a/android/rust/Cargo.toml
+++ b/android/rust/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 crate_type = ["cdylib"]
 
 [dependencies]
+rcgen = { version = "0.13.1", features = ["pem"] }
 jni = { version = "0.21", default-features = false }
 vaultwarden = { path = "../../" }
 
